--- a/.golangci.yml
+++ b/.golangci.yml
@@ -55,6 +55,9 @@ issues:
   # Not using default exclusions because we want to require comments on public
   # functions and types.
   exclude-use-default: false
+  exclude:
+    - should have a package comment
+    - package comment should be of the form
 
 # options for analysis running
 run:
